@@ -1,3 +1,10 @@
+2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Geospatial.h:
+	* Geospatial.cpp:
+	* GeoOrigin.cpp:
+	* X3DGeospatialObject.cpp: 
+
 2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Geospatial.h:
