@@ -1,3 +1,8 @@
+2014-03-18  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Geodetic.h:
+	* UniversalTransverseMercator.h: 
+
 2014-03-17  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Geodetic.h: 
